@@ -1,5 +1,6 @@
 20220601:
  * Updating mechanisms to install and/or detect LLVM
+ * added support to install prebuilt LLVM for Linux, MacOs, Windows
 
 20220525:
  * Fixing basic IC to print hello world
